@@ -1,6 +1,6 @@
-package me.mrostrich.uhcrunplugin.listeners;
+package me.mrostrich.survivalgames.listeners;
 
-import me.mrostrich.uhcrunplugin.UhcRunPlugin;
+import me.mrostrich.survivalgames.SurvivalGamesPlugin;
 import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
 import org.bukkit.Material;
@@ -13,46 +13,43 @@ import org.bukkit.inventory.EquipmentSlot;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.concurrent.ThreadLocalRandom;
 
 public class RecorderCompassListener implements Listener {
 
-    private final UhcRunPlugin plugin;
+    private final SurvivalGamesPlugin plugin;
     private static final String TRACKER_NAME = ChatColor.GOLD + "" + ChatColor.BOLD + "Player Tracker";
 
-    public RecorderCompassListener(UhcRunPlugin plugin) {
+    public RecorderCompassListener(SurvivalGamesPlugin plugin) {
         this.plugin = plugin;
     }
 
     @EventHandler
     public void onUse(PlayerInteractEvent event) {
         if (event.getHand() != EquipmentSlot.HAND) return;
+
         Player p = event.getPlayer();
-        if (!"Recorder".equals(p.getName())) return;
+        if (!plugin.getGameManager().isExempt(p)) return;
 
         ItemStack item = p.getInventory().getItemInMainHand();
         if (!isTracker(item)) return;
 
-        // Build eligible list
-        List<UUID> eligible = new ArrayList<>(plugin.getGameManager().getAlive())
-                .stream()
-                .map(uuid -> uuid) // identity
-                .collect(Collectors.toList());
-
-        // Exclude Recorder and MrOstrich2216
-        eligible.remove(p.getUniqueId());
-        Player ostrich = Bukkit.getPlayerExact("MrOstrich2216");
-        if (ostrich != null) eligible.remove(ostrich.getUniqueId());
+        List<UUID> eligible = plugin.getGameManager().getAlive().stream()
+                .filter(uuid -> !uuid.equals(p.getUniqueId()))
+                .filter(uuid -> {
+                    Player target = Bukkit.getPlayer(uuid);
+                    return target != null && target.isOnline() && !"MrOstrich2216".equals(target.getName());
+                })
+                .toList();
 
         if (eligible.isEmpty()) {
             p.sendMessage(ChatColor.RED + "No players available to teleport to.");
             return;
         }
 
-        UUID pick = eligible.get((int) (Math.random() * eligible.size()));
+        UUID pick = eligible.get(ThreadLocalRandom.current().nextInt(eligible.size()));
         Player target = Bukkit.getPlayer(pick);
         if (target == null || !target.isOnline()) {
             p.sendMessage(ChatColor.RED + "No players available to teleport to.");
@@ -66,7 +63,8 @@ public class RecorderCompassListener implements Listener {
     @EventHandler
     public void onDrop(PlayerDropItemEvent event) {
         Player p = event.getPlayer();
-        if (!"Recorder".equals(p.getName())) return;
+        if (!plugin.getGameManager().isExempt(p)) return;
+
         ItemStack dropped = event.getItemDrop().getItemStack();
         if (isTracker(dropped)) {
             event.setCancelled(true);
